Finally fixed button issues of visited links changing colors and center aligned auction thumbnails in auction#index.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -23,3 +23,11 @@
   -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
   box-shadow: 0 1px 2px rgba(0,0,0,.15);
 }
+
+a.btn:visited { color: #333; }
+
+a.btn-danger:visited { color: #fff; }
+
+a.btn-primary:visited { color: #fff; }
+
+a.btn-inverse:visited { color: #fff; }
