--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -18,29 +18,26 @@ body { padding-top: 60px; }
   font-size: 20px;
 }
 
-.vcenter {
-  .canvas {
-	padding: 10px;
+.canvas {
+  padding: 10px;
+  background-color: #B0B0B0;
+  width: 300px;
+  height: 300px;
+  -webkit-border-radius: 6px 6px 6px 6px;
+  -moz-border-radius: 6px 6px 6px 6px;
+  border-radius: 6px 6px 6px 6px;
+  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);
+  -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
+  box-shadow: 0 1px 2px rgba(0,0,0,.15);
+
+  img {
 	vertical-align: middle;
-	background-color: #B0B0B0;
-	width: 300px;
-	height: 300px;
-	-webkit-border-radius: 6px 6px 6px 6px;
-	-moz-border-radius: 6px 6px 6px 6px;
-	border-radius: 6px 6px 6px 6px;
-	-webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);
-	-moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
-	box-shadow: 0 1px 2px rgba(0,0,0,.15);
   }
 }
 
 legend {
   font-size: 30px;
   margin-bottom: 10px;
-}
-
-a:visited {
-  color: #FFFAF0;
 }
 
 .thumbnail {
