--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -54,3 +54,7 @@ div {
   ul li {
     font-size: 12px;
     list-style: square; } }
+
+canvas {
+	vertical-align: middle;
+}
